[package]
name = "shell-rerun"
version = "0.1.0"
edition = "2021"
authors = ["Shiva Prasanth <kesavarapu.siva@gmail.com>"]
description = "Simple command runner to rerun same command with different args every time."
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0"
shellexpand = "2.1.0"
shell-words = "1.1.0"


[profile.release]
strip = "symbols"